# mod-upgrade-tool

./: .gitignore  README.md  index.ts  upgrade.bat  upgrade.sh  util.ts
parsing/: Cargo.toml
parsing/ebnf-parser/: Cargo.toml
parsing/ebnf-parser/benches/: parsing.rs
parsing/ebnf-parser/src/: ast.rs  ebnf.rs  error.rs  get_line_and_col.rs  lexer.rs  lib.rs
parsing/ebnf-parser/src/earley_parser/: ambiguity.rs  completed_earley_item.rs  earley_item.rs  earley_parser.rs  earley_recognizer.rs  earley_recognizer_result.rs  find_nullables.rs  mod.rs  rule.rs
parsing/ebnf-parser/src/earley_parser/tests/: mod.rs  parser.rs  recognizer.rs  recognizer_expected.txt
parsing/ebnf-parser/tests/pl0/: pl0-expected.txt  pl0-sample.pl0  pl0.ebnf
parsing/lua-parsers/: Cargo.toml
parsing/lua-parsers/benches/: blizzardman.lua  liberation_mission.lua  lua.rs
parsing/lua-parsers/src/: lib.rs  lua54.ebnf  lua54.rs
parsing/mod-parsers-wasm/: Cargo.toml
parsing/mod-parsers-wasm/pkg/: index.ts  mod_parsers_wasm.d.ts  mod_parsers_wasm.js  mod_parsers_wasm_bg.wasm  mod_parsers_wasm_bg.wasm.d.ts  package.json
parsing/mod-parsers-wasm/src/: ast_to_js.rs  lib.rs  lua54.ebnf  lua54.rs  work_tree.rs
src/: index.ts  upgrade_tree.ts
tests/: patch_test.ts
upgraders/: 0.1.ts  0.10.ts  0.11.ts  0.12.ts  0.13.ts  0.2.ts  0.20.ts  0.25.ts  0.27.ts  0.3.ts  0.9.ts  ONB-v2.5.ts  v2.5.ts
