[package]
name = "lua-parsers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ebnf-parser = { path = "../ebnf-parser" }
regex = "1.5.6"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "lua"
harness = false
