[package]
name = "mod-parsers-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.80"
ebnf-parser = { path = "../ebnf-parser" }
js-sys = "0.3.57"
console_error_panic_hook = "0.1.7"
regex = "1.5.6"
